@@ -1,0 +1,6 @@
+Tests: 4.08.1 ocaml-system
+Depends: @, ca-certificates
+Restrictions: isolation-container, allow-stderr
+
+Test: ocaml-system
+Depends: ocaml-nox
